DX-POC: document get products endpoint
